# ft_model

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  PROJECT_STATUS.md  README.md  README_zh.md  package-lock.json  package.json  start_preview.py  start_preview.sh  test_filled.dxf  test_solids.dxf
.claude/: launch.json
.claude/agents/: dwg-annotation.md  dwg-geometry.md  dwg-infra.md  dwg-insert.md  parser.md  platform.md  qa.md  renderer.md  scene-infra.md
core/: CMakeLists.txt
core/include/cad/: cad_engine.h  cad_errors.h  cad_types.h
core/include/cad/interaction/: gesture_handler.h  selection_engine.h  snap_engine.h
core/include/cad/memory/: arena_allocator.h  object_pool.h  string_pool.h
core/include/cad/parser/: dwg_block_classification.h  dwg_diagnostics.h  dwg_entity_annotation.h  dwg_entity_common.h  dwg_entity_hatch.h  dwg_entity_sink.h  dwg_header_vars.h  dwg_object_map.h  dwg_objects.h  dwg_parse_helpers.h  dwg_parse_objects_context.h  dwg_parser.h  dwg_r2004_decoder.h  dwg_r2007_codec.h  dwg_reader.h  dxf_blocks_reader.h  dxf_entities_reader.h  dxf_header_reader.h  dxf_objects_reader.h  dxf_parser.h  dxf_section_reader.h  dxf_tables_reader.h  dxf_tokenizer.h
core/include/cad/renderer/: camera.h  frustum_culler.h  lod_selector.h  render_batcher.h  render_command.h  render_context.h
core/include/cad/scene/: block.h  block_reference.h  entity.h  layer.h  linetype.h  scene_graph.h  spatial_index.h  text_style.h  viewport.h
core/src/: cad_engine.cpp  cad_ffi_api.cpp  cad_types.cpp
core/src/interaction/: gesture_handler.cpp  selection_engine.cpp  snap_engine.cpp
core/src/memory/: arena_allocator.cpp  object_pool.cpp  string_pool.cpp
core/src/parser/: dwg_block_classification.cpp  dwg_block_tracking.cpp  dwg_custom_annotation_proxy.cpp  dwg_diagnostics.cpp  dwg_entity_annotation.cpp  dwg_entity_geometry.cpp  dwg_entity_hatch.cpp  dwg_handle_stream.cpp  dwg_header_vars.cpp  dwg_object_map.cpp  dwg_object_recovery.cpp  dwg_objects.cpp  dwg_parse_diagnostics_emit.cpp  dwg_parse_helpers.cpp  dwg_parser.cpp  dwg_post_processing.cpp  dwg_r2000_decoder.cpp  dwg_r2004_decoder.cpp  dwg_r2007_codec.cpp  dwg_r2007_page_decode.cpp  dwg_reader.cpp  dwg_reader_crc_lz77.cpp  dwg_reader_stream.cpp  dwg_table_prescan.cpp  dxf_blocks_reader.cpp  dxf_entities_reader.cpp  dxf_header_reader.cpp  dxf_objects_reader.cpp  dxf_parser.cpp  dxf_section_reader.cpp  dxf_tables_reader.cpp  dxf_tokenizer.cpp
core/src/renderer/: camera.cpp  frustum_culler.cpp  lod_selector.cpp  render_batcher.cpp  render_batcher_curve.cpp  render_batcher_entity.cpp  render_batcher_internal.h  render_command.cpp  render_context.cpp
core/src/scene/: block.cpp  block_reference.cpp  entity.cpp  layer.cpp  linetype.cpp  scene_graph.cpp  spatial_index.cpp  viewport.cpp
core/test/: CMakeLists.txt  entity_export.cpp  test_parser.cpp  test_regression_smoke.cpp  test_render_export.cpp
docs/: CHANGELOG.md  ROADMAP-0.2.0.md  dwg_fidelity_audit_0.8.0.md  dwg_layout_objects.md  dwg_multi_version_compatibility.md  dwg_object_type_reference.md  dwg_version_deltas.md  dwg_xref_external.md  v0.5.0_plan.md  v0.9.0-plan.md
gfx/: CMakeLists.txt
gfx/include/cad/gfx/: gfx_buffer.h  gfx_command_list.h  gfx_device.h  gfx_pipeline.h  gfx_types.h
gfx/src/null_backend/: null_device.cpp  null_device.h
gfx/src/software_backend/: sw_device.cpp  sw_device.h
gfx/src/webgl_backend/: webgl_device.cpp  webgl_device.h
scripts/: analyze_dwg_classes.py  batch_compare.py  batch_convert_scs.py  canvas_to_svg.py  compare_entities.py  compare_hoops.py  compare_libredwg_json.py  compare_parser_output.py  compare_scene_tree.py  compare_structural.py  dev_check.py  dump_dwg_sections.py  extract_scs_tree.py  gen_campus_dxf.py  gen_reference_data.py  gen_test_dxf.py  prewarm_reference_cache.py  quick_batch.py  run_all_tests.py  run_regression.py  svg_vector_compare.py  test_dxf_roundtrip.py  test_geometric_accuracy.py  test_tessellation_accuracy.py  visual_compare.py
test_reference/: .gitignore
tools/: CMakeLists.txt
tools/dwg_to_json/: CMakeLists.txt  dwg_to_json.cpp  entity_visitor.cpp  entity_visitor.h  json_writer.cpp  json_writer.h
tools/dwg_to_scs/: CMakeLists.txt  dwg_to_scs.cpp
